# pygments-lammps

./: LICENSE  README.md  pyproject.toml
pygments_lammps/: __init__.py  lammps.py
